--- a/Video/Terminator/config.yaml
+++ b/Video/Terminator/config.yaml
@@ -12,3 +12,14 @@ tags: ['Terminator', 'Arnold Schwarzenegger', 'terminator', 'art', 'canvas paint
         'фото реализм', 'пейзаж', 'дизайн интерьера', 'абстракция',
         'art', 'oil painting', 'tutorial',
         'landscape', 'картина маслом']
+
+Title: Картина маслом. Арнольд Шварценеггер - Терминатор
+
+Description: >
+        "Терминатор появился в 1991 году и завоевал сердца людей нашей 
+        страны, стал культом молодежи. Он не ушел в историю, продолжает 
+        оставаться символом мужской силы, силы разума человека, культ 
+        симбиоза человека с машиной, культ завоевателя и разрушителя, 
+        культ вечного солдата.
+
+        Мои контакты https://t.me/artcat78 "
