--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-google-api-python-client
-google-auth-oauthlib
+deep-translator>=1.8.3
+googletrans>=3.0.0
+moviepy>=1.0.3
+PyYAML>=6.0
+httplib2>=0.20.4
+oauth2client>=4.1.3
+numpy>=1.23.3
+google-api-python-client>=2.61.0
+google-auth-oauthlib>=0.5.3
 google-auth-httplib2
-deep-translator
-googletrans~=3.0.0
-moviepy==1.0.3
-pyzmq
-numpy==1.23.2
-PyYAML==6.0
