add Create thumbnail

--- a/Video/Terminator/config.yaml
+++ b/Video/Terminator/config.yaml
@@ -1,5 +1,6 @@
 Project: Terminator
 TitleCanvas: Терминатор
+ThumbnailTitle: Картина Маслом Терминатор
 WhoOnCanvas: Арнольд Шварценеггер
 Video_file: Terminator.mov
 tags: ['Terminator', 'Arnold Schwarzenegger', 'terminator', 'art', 'canvas paint',
