--- a/Video/Terminator/config.yaml
+++ b/Video/Terminator/config.yaml
@@ -17,10 +17,103 @@ tags: ['Terminator', 'Arnold Schwarzenegger', 'terminator', 'art', 'canvas paint
 Title: Картина маслом. Арнольд Шварценеггер - Терминатор
 
 Description: >
-        Терминатор появился в 1991 году и завоевал сердца людей нашей 
-        страны, стал культом молодежи. Он не ушел в историю, продолжает 
-        оставаться символом мужской силы, силы разума человека, культ 
-        симбиоза человека с машиной, культ завоевателя и разрушителя, 
-        культ вечного солдата.
+        Мои контакты: https://t.me/artcat78
+        ПИШУ ПОРТРЕТЫ НА ЗАКАЗ ПО ФОТОГРАФИИ 
 
-        Мои контакты https://t.me/artcat78
+VideoId:
+#        - am: EbOEKBKtMqU
+#        - de: l7Gwja3Zj3U
+#        - en: 49yenQtddyQ
+#        - af: QKe-RHRc8qA
+#        - da: uc94wppZA4M
+#        - cy: vyz_3nkogoE
+#        - cs: xdFGLhue_c8
+#        - co: vxlXW5fljsg # bad keyword
+#        - ca: YwDJ1DQ5q10
+#        - bs: FARKw3jBlWw
+#        - bn: yXNrwMxSfCE
+#        - bg: B2e4qCy0wQw # bad keyword
+#        - be: UNl7bEWUhzI
+#        - az: 6VELF75H3lI
+#        - ar: -8fU7zQWFhI
+#        - eo: ERGDiMwsLkw
+#        - es: FVY8pNcDFzo  # bad keyword
+#        - et: hKapH3KeYQE
+#        - eu: Rmcbg-RY7rc # bad keyword
+#        - fa: 5UxIEMHAbUU
+#        - fi: g1AaUGz0nKQ # bad keyword
+#        - fr: MnV0R3u4FYQ # bad keyword
+#        - fy: yp6d8jpH6HU
+#        - ga: YtVp9FzbPiQ
+#        - gd: G1V_KfKqS2o
+#        - gl: vsUMQ7HVLlo
+#        - ha: ZB7r1kVFKuQ
+#        - haw: AFUukaY-xnM
+#        - hr: kS7mcHc6fJM
+#        - ht: xaz5NBycxgU
+#        - hu: nLrf-OCJJvk
+#        - hy: ScQ7V4t8Iuc
+#        - id: QlHvA8mQnO8
+#        - ig: HAlSH10ZZbU
+        - is: p9B7u4wgHK0
+#        - it: SElbkmSLjg0
+#        - iw: 6tcbrPFfU6E
+#        - ja: Xu-QrMwvNDI
+#        - jw: QjcyJeiih-E
+#        - ka: NghddLDCw1Q
+#        - kk: NjsWQOBFuIE
+#        - km: bS5Zu_VJEuY
+#        - kn: R5vMfAIV1Tk
+#        - ko: ODwaPo7ZP8c
+#        - ku: u5F3jxZEfXU
+#        - ky: nsMbAMkFQe0
+#        - la: EV4QiV2dKns
+#        - lb: KEvA46CTSKM
+#        - lo: _vePAeZkQR0
+#        - lt: 6vb8bDx9Q9Y
+#        - lv: 8RlJcHsX_iQ
+#        - mg: 1afAzk-2kkk
+#        - mi: XFD4-kW-4Is
+#        - mn: Gl4Y2KmXX6w
+#        - mk: lhN8aqflNqI
+#        - ms: E6_LzCboRSo
+#        - mt: 7YoZbGjcNMU
+#        - my: EVdG5UDBIYg
+#        - ne: pY2oazemc-k
+#        - nl: DS83Q73XjmE
+#        - no: 7SEcBQqi5N0 #bad
+#        - pl: 1q7hV4NGuGE
+#        - ps: 9s7K-makigw
+#        - pt: QMcj2d9RKwM
+#        - ro: J584aNhJwNw
+#        - ru: 41UhcSWrVRk
+#        - rw: ISk_OIXaS5Y
+#        - sd: zEBi0jtViPo #bad
+#        - sk: 5Q45D8qp4tc
+#        - sl: xmRqhkP5_4Q
+#        - sm: r4R8ecPAKmk #bad
+        - sn: -0cRU2Ic8Kg
+        - so: xiRo592Dneg
+        - sq: JICZlUZ2Uok
+        - sr: BJIE_m8Y4eM
+        - st: PbF3Gfp1S0E
+        - sv: Lt8Y-ev45Us
+        - sw: gov0CCTkB1M
+        - sw: gov0CCTkB1M
+        - te: 4Kq_V4XvSno
+        - tg: jIzk98xCuTo
+        - th: MCSzN04hLGY
+        - tk: A0OY_CzzgKE
+        - tl: wNuKvWrayAo
+        - tr: y9AyasyHBz8
+        - tt: 7jG8ohDbWho
+        - ug: nvG6SqjFurM
+        - ur: tgVrDZGH2aM
+        - uz: EkLvr-DHFJg
+        - vi: Qex94FZUxmQ
+        - xh: O3jpqeS8ZUc
+        - yi: D7u3LjuLN2c
+        - yo: -3Eo_jUNddI
+        - zh-CN: lbk71JifsPA
+        - zh-TW: PzBo5grs4co
+        - zu: -_F-xIwDrDM
