init from local to remote repos

--- a/Video/Terminator/config.yaml
+++ b/Video/Terminator/config.yaml
@@ -14,7 +14,7 @@ tags: ['Terminator', 'Arnold Schwarzenegger', 'terminator', 'art', 'canvas paint
         'art', 'oil painting', 'tutorial',
         'landscape', 'картина маслом']
 
-Title: Картина маслом. Арнольд Шварценеггер - Терминатор
+Title: Картина маслом. Портрет. Арнольд Шварценеггер - Терминатор
 
 Description: >
         Мои контакты: https://t.me/artcat78
@@ -55,7 +55,7 @@ VideoId:
 #        - hy: ScQ7V4t8Iuc
 #        - id: QlHvA8mQnO8
 #        - ig: HAlSH10ZZbU
-        - is: p9B7u4wgHK0
+#        - is: p9B7u4wgHK0
 #        - it: SElbkmSLjg0
 #        - iw: 6tcbrPFfU6E
 #        - ja: Xu-QrMwvNDI
@@ -80,23 +80,21 @@ VideoId:
 #        - mt: 7YoZbGjcNMU
 #        - my: EVdG5UDBIYg
 #        - ne: pY2oazemc-k
-#        - nl: DS83Q73XjmE
-#        - no: 7SEcBQqi5N0 #bad
-#        - pl: 1q7hV4NGuGE
-#        - ps: 9s7K-makigw
-#        - pt: QMcj2d9RKwM
-#        - ro: J584aNhJwNw
-#        - ru: 41UhcSWrVRk
-#        - rw: ISk_OIXaS5Y
-#        - sd: zEBi0jtViPo #bad
-#        - sk: 5Q45D8qp4tc
-#        - sl: xmRqhkP5_4Q
-#        - sm: r4R8ecPAKmk #bad
+        - pl: 1q7hV4NGuGE
+        - ps: 9s7K-makigw
+        - pt: QMcj2d9RKwM
+        - ro: J584aNhJwNw
+        - ru: 41UhcSWrVRk
+        - rw: ISk_OIXaS5Y
+        - sd: zEBi0jtViPo #bad
+        - sk: 5Q45D8qp4tc
+        - sl: xmRqhkP5_4Q
+        - sm: r4R8ecPAKmk #bad
         - sn: -0cRU2Ic8Kg
         - so: xiRo592Dneg
         - sq: JICZlUZ2Uok
         - sr: BJIE_m8Y4eM
-        - st: PbF3Gfp1S0E
+        - st: PbF3Gfp1S0E #bad
         - sv: Lt8Y-ev45Us
         - sw: gov0CCTkB1M
         - sw: gov0CCTkB1M
@@ -108,7 +106,7 @@ VideoId:
         - tr: y9AyasyHBz8
         - tt: 7jG8ohDbWho
         - ug: nvG6SqjFurM
-        - ur: tgVrDZGH2aM
+        - ur: tgVrDZGH2aM 
         - uz: EkLvr-DHFJg
         - vi: Qex94FZUxmQ
         - xh: O3jpqeS8ZUc
